[gd_scene load_steps=10 format=3 uid="uid://vxe42563otpi"]

[ext_resource type="Script" path="res://Manager/UI/skill_tree.gd" id="1_hpmon"]
[ext_resource type="Texture2D" uid="uid://cxer7mwrg8vwh" path="res://Sprites/UI/scale_able_container.png" id="1_kthid"]
[ext_resource type="Theme" uid="uid://ss5o0ot61xc0" path="res://themes/title_screen.tres" id="3_k1lub"]

[sub_resource type="LabelSettings" id="LabelSettings_tviql"]
font_size = 34
font_color = Color(100, 100, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_ufqak"]
font_size = 28

[sub_resource type="LabelSettings" id="LabelSettings_5gl1l"]
font_size = 28
font_color = Color(0.28984, 0.873431, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_gw02e"]
font_size = 28
font_color = Color(0.290196, 0.87451, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_h1dt6"]
font_size = 28
font_color = Color(0.494313, 0.759706, 1, 1)

[sub_resource type="LabelSettings" id="LabelSettings_py3kk"]
font_size = 28
font_color = Color(0.540339, 0.85309, 1, 1)

[node name="SkillTree" type="CanvasLayer"]
process_mode = 3
layer = 128
script = ExtResource("1_hpmon")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.2)

[node name="MarginContainer" type="MarginContainer" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 100
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 100
theme_override_constants/margin_bottom = 50

[node name="NinePatchRect" type="NinePatchRect" parent="Control/MarginContainer"]
layout_mode = 2
texture = ExtResource("1_kthid")
patch_margin_left = 100
patch_margin_top = 100
patch_margin_right = 100
patch_margin_bottom = 100

[node name="pos" type="MarginContainer" parent="Control/MarginContainer/NinePatchRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 75
theme_override_constants/margin_top = 75
theme_override_constants/margin_right = 75
theme_override_constants/margin_bottom = 75

[node name="VBoxContainer" type="VBoxContainer" parent="Control/MarginContainer/NinePatchRect/pos"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Control/MarginContainer/NinePatchRect/pos/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 0

[node name="Control" type="Control" parent="Control/MarginContainer/NinePatchRect/pos/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ColorRect" type="ColorRect" parent="Control/MarginContainer/NinePatchRect/pos/VBoxContainer/HBoxContainer/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 1, 0)

[node name="MarginContainer" type="MarginContainer" parent="Control/MarginContainer/NinePatchRect/pos/VBoxContainer/HBoxContainer/Control/ColorRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 32

[node name="VBoxContainer" type="VBoxContainer" parent="Control/MarginContainer/NinePatchRect/pos/VBoxContainer/HBoxContainer/Control/ColorRect/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Title" type="Label" parent="Control/MarginContainer/NinePatchRect/pos/VBoxContainer/HBoxContainer/Control/ColorRect/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(314, 100)
layout_mode = 2
theme = ExtResource("3_k1lub")
text = "No Perk Selected"
label_settings = SubResource("LabelSettings_tviql")
autowrap_mode = 3

[node name="Describtion" type="Label" parent="Control/MarginContainer/NinePatchRect/pos/VBoxContainer/HBoxContainer/Control/ColorRect/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 579)
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("3_k1lub")
label_settings = SubResource("LabelSettings_ufqak")
autowrap_mode = 3
clip_text = true

[node name="HBoxContainer2" type="HBoxContainer" parent="Control/MarginContainer/NinePatchRect/pos/VBoxContainer/HBoxContainer/Control/ColorRect/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="cost" type="Label" parent="Control/MarginContainer/NinePatchRect/pos/VBoxContainer/HBoxContainer/Control/ColorRect/MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_vertical = 2
theme = ExtResource("3_k1lub")
text = "Money:"
label_settings = SubResource("LabelSettings_5gl1l")
horizontal_alignment = 1

[node name="owned_money" type="Label" parent="Control/MarginContainer/NinePatchRect/pos/VBoxContainer/HBoxContainer/Control/ColorRect/MarginContainer/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 2
theme = ExtResource("3_k1lub")
text = "1000$"
label_settings = SubResource("LabelSettings_gw02e")
horizontal_alignment = 2
clip_text = true

[node name="HBoxContainer" type="HBoxContainer" parent="Control/MarginContainer/NinePatchRect/pos/VBoxContainer/HBoxContainer/Control/ColorRect/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="cost" type="Label" parent="Control/MarginContainer/NinePatchRect/pos/VBoxContainer/HBoxContainer/Control/ColorRect/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 2
theme = ExtResource("3_k1lub")
text = "Cost:"
label_settings = SubResource("LabelSettings_h1dt6")
horizontal_alignment = 1

[node name="cost2" type="Label" parent="Control/MarginContainer/NinePatchRect/pos/VBoxContainer/HBoxContainer/Control/ColorRect/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 2
theme = ExtResource("3_k1lub")
text = "???$"
label_settings = SubResource("LabelSettings_py3kk")
horizontal_alignment = 2
clip_text = true

[node name="ScrollContainer" type="ScrollContainer" parent="Control/MarginContainer/NinePatchRect/pos/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(1046, 0)
layout_mode = 2
size_flags_horizontal = 3
follow_focus = true

[node name="VBoxContainer" type="VBoxContainer" parent="Control/MarginContainer/NinePatchRect/pos/VBoxContainer/HBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
